test_site/content/url/errors/duplicate-a.typ.disabled
// ERROR TEST: Two pages with same permalink
// Expected: Build should fail with "permalink conflicts" error

#metadata((
  title: "Duplicate Permalink A",
  permalink: "/same-url/",
)) <tola-meta>

= Duplicate A

This page has the same permalink as duplicate-b.typ.
